// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddRecipient > should hide available balance if fee > balance 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap whitespace-no-break text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with empty array of recipients as default 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with multiple recipients switch 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with single recipient data 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render without the single & multiple switch 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should set available amount 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="33.75089801"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="active css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should show available balance after fee 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                4
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap whitespace-no-break text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should show zero amount if wallet has zero or insufficient balance 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-14ojvms"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-10qz30z"
    >
      <div
        class="space-y-4"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-5kz4tk"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-1njetft"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="true"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="0"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    data-testid="Input__addon-end"
                  >
                    <span
                      data-errortext="The balance is too low"
                      data-testid="Input__error"
                    >
                      <div
                        class="text-theme-danger-500 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="circle-exclamation-mark"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="10"
                              r="9"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 10.5v-5"
                              stroke-linecap="round"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 14h0"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="active css-1v4a3it"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
